--- a/Projet_tuto/Vues/css/produits.css
+++ b/Projet_tuto/Vues/css/produits.css
@@ -1,16 +1,33 @@
-table, th, td
+.liste_produits
 {
-	border: 1px solid black;
-	border-collapse: collapse;
+	
 }
 
-th, td
+.ligne_produits
+{
+	display: flex;
+	justify-content: space-evenly;
+	margin-bottom: 30px;
+}
+
+.produit
 {
 	text-align: center;
 }
 
-.liste_produits
+.number
 {
-	display: flex;
-	justify-content: center;
+	width: 50px;
+}
+
+.produit img
+{
+	width: 150px;
+}
+
+
+.bouton_panier
+{
+	margin-bottom:45px;
+	text-align: center;
 }
