--- a/Projet_tuto/Vues/css/produits.css
+++ b/Projet_tuto/Vues/css/produits.css
@@ -1,8 +1,3 @@
-.liste_produits
-{
-	
-}
-
 .ligne_produits
 {
 	display: flex;
@@ -23,6 +18,7 @@
 .produit img
 {
 	width: 150px;
+	height: 100px;	
 }
 
 
