--- a/Site_web/Vues/css/nav.css
+++ b/Site_web/Vues/css/nav.css
@@ -13,6 +13,7 @@ nav
 	border-top-right-radius: 7%;*/
 	border-bottom-left-radius: 25%;
 	border-bottom-right-radius: 25%;
+	z-index : 1;
 }
 
 .element_nav
